--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: 'Kavivanar', cursive;
 }
 body{
     background-color: rgb(156, 195, 221);
@@ -18,10 +19,11 @@ header h1{
 .row .card{
     position: relative;
     display: inline-block;
-    width: 200px;
-    height: 300px;
+    width: 150px;
+    height: 230px;
     margin: 10px 30px;
-    
+    background-color: white;
+    border-radius: 12px;
 }
 .row{
     text-align: center;
@@ -29,19 +31,28 @@ header h1{
 
 div img:first-child{
     display: none;
-    z-index: 1;
+    background-color: white;
+    border-radius: 12px;
 }
 div img:only-of-type{
     display: initial;
+    
 }
 div span{
-    z-index: 2;
     color: red;
     position: absolute;
     bottom: 0;
-    left: 40%;
+    left: 30%;
+    font-weight: 900;
+    display: none;
 }
+
 .card img{
     width: 100%;
     height: 100%;
+    background-position: center;
+    background-size: contain;
+}
+.card img:nth-child(2){
+    border-radius: 12px;
 }
