--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,6 @@
 body{
     background-color: rgb(156, 195, 221);
 }
-main{
-    margin: 20px 80px;
-}
-
 header h1{
     text-align: center;
     color: white;
@@ -23,36 +19,39 @@ header h1{
     height: 230px;
     margin: 10px 30px;
     background-color: white;
-    border-radius: 12px;
+    border-radius: 15px;
 }
 .row{
     text-align: center;
 }
-
-div img:first-child{
-    display: none;
-    background-color: white;
-    border-radius: 12px;
-}
-div img:only-of-type{
-    display: initial;
-    
-}
-div span{
-    color: red;
-    position: absolute;
-    bottom: 0;
-    left: 30%;
-    font-weight: 900;
-    display: none;
-}
-
-.card img{
+.pattern{
     width: 100%;
     height: 100%;
-    background-position: center;
-    background-size: contain;
+    border-radius: 15px;
+    position: absolute;
+    z-index: 2;
 }
-.card img:nth-child(2){
-    border-radius: 12px;
+.pattern > img{
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+}
+.img-p{
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    position: absolute;
+    z-index: 1;
+}
+.img-p > img{
+    width: 100%;
+    height: 80%;
+}
+.img-p > span{
+    color: red;
+    font-weight: 700;
+    font-size: 20px;
+}
+.card:hover .pattern{
+    display: none;
 }
